--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,10 @@
     "require": {
         "typo3/cms-core": "^9.5 || ^10.4 || ^11"
     },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "^3.0",
+        "editorconfig-checker/editorconfig-checker": "^10.0"
+    },
     "autoload": {
         "psr-4": {
             "Sitegeist\\CsvLabels\\": "Classes"
@@ -20,5 +24,23 @@
         "psr-4": {
             "Sitegeist\\CsvLabels\\Tests\\": "Tests"
         }
+    },
+    "config": {
+        "vendor-dir": ".Build/vendor",
+        "bin-dir": ".Build/bin"
+    },
+    "extra": {
+        "typo3/cms": {
+            "cms-package-dir": "{$vendor-dir}/typo3/cms",
+            "web-dir": ".Build/Web"
+        }
+    },
+    "scripts": {
+        "lint": [
+            "@lint:php",
+            "@lint:editorconfig"
+        ],
+        "lint:php": "phpcs --standard=PSR2 --extensions=php --exclude=Generic.Files.LineLength --ignore=.Build,Tests .",
+        "lint:editorconfig": "ec ."
     }
 }
