--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,12 @@
             "role": "Developer"
         }
     ],
+    "license": [
+        "GPL-2.0-or-later"
+    ],
+    "support": {
+        "issues": "https://github.com/sitegeist/csv-labels/issues"
+    },
     "require": {
         "typo3/cms-core": "^9.5 || ^10.4 || ^11"
     },
