--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "issues": "https://github.com/sitegeist/csv-labels/issues"
     },
     "require": {
-        "typo3/cms-core": "^12.2 || ^11.5 || ^10.4 || ^9.5"
+        "typo3/cms-core": "^13.1 || ^12.2 || ^11.5 || ^10.4 || ^9.5"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.0",
